--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
       <strong>We're sorry but Vivarihome doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/home/vivarihome/vivarihome/src/main.js"></script>
     <!-- built files will be auto injected -->
   </body>
+  <script>0</script>
 </html>
